--- a/riassunto.tex
+++ b/riassunto.tex
@@ -157,9 +157,12 @@
 				\item ARPANET: Internet è nato come progetto militare. ARPANET è stata sviluppata verso la fine degli anni '60. Era composta da minicomputer chiamati IMP collegati da linee di trasmissione a 56 kbps. Ogni IMP doveva essere collegato ad almeno altri due IMP. La sottorete era basata su datagrammi: in caso di distruzione di alcune linee, i pacchetti facevano un'altra strada. Inizialmente, ARPANET collegava diverse università degli USA. Verso gli anni '80 venne creato il DNS, poi evolutosi in un database distribuito. 
 				\item NSFMET: permetteva la connessione dei dipartimenti di informatica e dei laboratori ad ARPANET, via dial-up e linee d'affitto. \\
 				NSF costruì una rete di dorsale (backbone) per collegare i suoi 6 centri di ricerca.\\ Dato l'enorme successo, venne creata ANSNET di tipo commerciale. 
-				\item 
 			\end{enumerate}
-		\paragraph{Architettura di Internet} In Internet un computer si connette ad u ISP, il quale fornisce la connessione ad Internet. 
+		\paragraph{Architettura di Internet} In Internet un computer si connette ad u ISP, il quale fornisce la connessione ad Internet. \\
+		Per connettersi all'ISP ci sono diversi modi: uno di questi è usare la linea telefonica, usando la DSL: il computer viene collegato ad un modem DSL che converte i pacchetti digitali in segnali analogici. Un dispositivo chiamato DSLAM converte i segnali analogici in pacchetti dall'altra parte della linea.\\
+		Un altro modo è usare il sistema della TV via cavo, \\ Il dispositivo situato in casa si chiama cable modem, quello all'altro capo invece CMTS (cable modem termination system). \\
+		Ora sta prendendo piede l'FTTH (fiber to the home).\\
+		Le reti ISP possno essere regionali, nazionali o internazionali. Le linee di trasmissione che collegano i vari ISP sono chiamate backbone (dorsali). 
 		\newpage
 		\section{Il livello fisico}
 		Definisce gli aspetti elettrici, di temporizzazione e le altre modalità con cui i bit vengono spediti sui canali di comunicazione.\\
